--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "engine":{
-    "node":"v20.13.1"
-
+  "engine": {
+    "node": "v20.13.1"
   },
   "name": "task_manage",
   "version": "1.0.0",
@@ -15,6 +14,7 @@
   "description": "",
   "dependencies": {
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
